transfered value to the settings.ini

--- a/settings.ini
+++ b/settings.ini
@@ -12,4 +12,6 @@ ResolutionHeight = 720
 [BarbarianBotSettings]
 MaximumPercentageThatTroopsAreAllowedToDecrease = 5
 CheckForHealingIntervalSeconds = 30
-InitialBarbarianLevelStart = 13
+StartingBarbarianLevel = 13
+MinimumBarbarianLevel = 11
+MaximumBarbarianLevel = 19
